# settei_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/aruku/: ArukuOffset.msg  Balance.msg  InitAngles.msg  Kinematic.msg  Odometry.msg  PID.msg  Ratio.msg
msg/atama/: Center.msg  Gain.msg  Limit.msg  Offset.msg  PanDistanceToTilt.msg  PanTiltToDistance.msg
msg/suiryoku/: Dribble.msg  Follow.msg  Kick.msg  Move.msg  Pivot.msg  Position.msg
srv/: GetData.srv  SetData.srv
srv/aruku/: ArukuGetData.srv  ArukuSetData.srv  SetData.srv
srv/atama/: AtamaSetData.srv  GetData.srv  SetData.srv
srv/suiryoku/: SetData.srv  SuiryokuGetData.srv  SuiryokuSetData.srv
